Cherry-pick 17ac2cd774fd. rdar://problem/98537484

REGRESSION (r288159): Tables layout broken on WPT.FYI
    https://bugs.webkit.org/show_bug.cgi?id=243856
    <rdar://98537484>

    Reviewed by Antti Koivisto.

    "word-break: break-all" says: this content is breakable at arbitrary position. However it does not necessarily mean we can break it at _any_ position (e.g. we can't break before punctuation).
    When applying minimum constraint (this is line layout with 0px available width), a content that starts with unbreakable characters (or rather, unbreakable position between them) is mistakenly treated as a _completely_ unbreakable content. It makes "minimum content width" == "maximum content width", which stops the content from being flexible.
    This patch handles such cases by walking the content forward to look for breakable positions.
    e.g. "!breaking" -> turns into "!b" "r" "e" "a" "k" "i" "n" "g" (note the "!b" at the beginning).

    * LayoutTests/fast/text/punctuation-break-all-2-expected.html: Added.
    * LayoutTests/fast/text/punctuation-break-all-2.html: Added.
    * LayoutTests/fast/text/punctuation-break-all-expected.html: Added.
    * LayoutTests/fast/text/punctuation-break-all.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
    (WebCore::Layout::midWordBreak):
    (WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):

    Canonical link: https://commits.webkit.org/253434@main

Canonical link: https://commits.webkit.org/252432.176@safari-7614-branch